--- a/customer/templates/customer/seller_register.html
+++ b/customer/templates/customer/seller_register.html
@@ -6,81 +6,92 @@
 <section class="section-content padding-y">
 
     <!-- ============================ COMPONENT REGISTER   ================================= -->
-        <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
-          <article class="card-body">
-            <header class="mb-4"><h4 class="card-title">Seller Sign up</h4></header>
-            <form>
-                    <div class="form-row">
-                        <div class="col form-group">
-                            <label>First name</label>
-                              <input type="text" class="form-control" placeholder="">
-                        </div> <!-- form-group end.// -->
-                        <div class="col form-group">
-                            <label>Last name</label>
-                              <input type="text" class="form-control" placeholder="">
-                        </div> <!-- form-group end.// -->
-                    </div> <!-- form-row end.// -->
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" class="form-control" placeholder="">
-                        <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+    <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
+        <span style="color: darkviolet; text-align: center;">
+            {{ message }}
+        </span>
+        <article class="card-body">
+            <header class="mb-4">
+                <h4 class="card-title">Seller Sign up</h4>
+            </header>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col form-group">
+                        <label>First name</label>
+                        <input type="text" class="form-control" placeholder="" name="fname">
                     </div> <!-- form-group end.// -->
-                    <div class="form-group">
-                        <label class="custom-control custom-radio custom-control-inline">
-                          <input class="custom-control-input" checked="" type="radio" name="gender" value="option1">
-                          <span class="custom-control-label"> Male </span>
-                        </label>
-                        <label class="custom-control custom-radio custom-control-inline">
-                          <input class="custom-control-input" type="radio" name="gender" value="option2">
-                          <span class="custom-control-label"> Female </span>
-                        </label>
+                    <div class="col form-group">
+                        <label>Last name</label>
+                        <input type="text" class="form-control" placeholder="" name="lname">
                     </div> <!-- form-group end.// -->
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                          <label>City</label>
-                          <input type="text" class="form-control">
-                        </div> <!-- form-group end.// -->
-                        <div class="form-group col-md-6">
-                          <label>Country</label>
-                          <input type="text" class="form-control" placeholder="">
-                        </div> <!-- form-group end.// -->
-                    </div> <!-- form-row.// -->
-                    <div class="form-group">
-                        <label>Company Name</label>
-                        <input type="text" class="form-control" placeholder="">                        
+                </div> <!-- form-row end.// -->
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control" placeholder="" name="email">
+                    <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+                </div> <!-- form-group end.// -->
+                <div class="form-group">
+                    <label class="custom-control custom-radio custom-control-inline">
+                        <input class="custom-control-input" checked="" type="radio" name="gender" value="Male">
+                        <span class="custom-control-label"> Male </span>
+                    </label>
+                    <label class="custom-control custom-radio custom-control-inline">
+                        <input class="custom-control-input" type="radio" name="gender" value="Female">
+                        <span class="custom-control-label"> Female </span>
+                    </label>
+                </div> <!-- form-group end.// -->
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label>City</label>
+                        <input type="text" class="form-control" name="city">
                     </div> <!-- form-group end.// -->
-                    <div class="form-group">
+                    <div class="form-group col-md-6">
+                        <label>Country</label>
+                        <input type="text" class="form-control" placeholder="" name="country">
+                    </div> <!-- form-group end.// -->
+                </div> <!-- form-row.// -->
+                <div class="form-group">
+                    <label>Company Name</label>
+                    <input type="text" class="form-control" placeholder="" name="companyname">
+                </div> <!-- form-group end.// -->
+                <div class="form-group">
                     <div class="form-group">
                         <label>Bank Name</label>
-                        <input type="text" class="form-control" placeholder="">                        
+                        <input type="text" class="form-control" placeholder="" name="bankname">
                     </div> <!-- form-group end.// -->
                     <div class="form-group">
                         <label>Bank Branch</label>
-                        <input type="text" class="form-control" placeholder="">                        
+                        <input type="text" class="form-control" placeholder="" name="branch">
                     </div> <!-- form-group end.// -->
                     <div class="form-group">
                         <label>Account number</label>
-                        <input type="number" class="form-control" placeholder="">                        
+                        <input type="number" class="form-control" placeholder="" name="accnumber">
                     </div> <!-- form-group end.// -->
                     <div class="form-group">
                         <label>IFSC <Code></Code></label>
-                        <input type="text" class="form-control" placeholder="">                        
+                        <input type="text" class="form-control" placeholder="" name="ifsc">
                     </div> <!-- form-group end.// -->
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"> Register  </button>
-                    </div> <!-- form-group// -->      
-                        
-                </form>
-            </article><!-- card-body.// -->
-        </div> <!-- card .// -->
-        <p class="text-center mt-4">Have an account? <a href="{% url 'customer:seller_login' %}">Log In</a></p>
-        <br><br>
+                        <label>Upload Image <Code></Code></label>
+                        <input type="file" class="form-control" placeholder="" name="picture">
+                    </div> <!-- form-group end.// -->
+
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block"> Register </button>
+                    </div> <!-- form-group// -->
+
+            </form>
+        </article><!-- card-body.// -->
+    </div> <!-- card .// -->
+    <p class="text-center mt-4">Have an account? <a href="{% url 'customer:seller_login' %}">Log In</a></p>
+    <br><br>
     <!-- ============================ COMPONENT REGISTER  END.// ================================= -->
-    
-    
-    </section>
-    <!-- ========================= SECTION CONTENT END// ========================= -->
-    
+
+
+</section>
+<!-- ========================= SECTION CONTENT END// ========================= -->
+
 
 {% endblock%}
