--- a/customer/templates/customer/customer_signup.html
+++ b/customer/templates/customer/customer_signup.html
@@ -7,10 +7,10 @@
 
     <!-- ============================ COMPONENT REGISTER   ================================= -->
         <div class="card mx-auto" style="max-width:520px; margin-top:40px;">
+          <span style="color: royalblue;text-align: center;font-size: larger;font-weight: bold;">
+             {{message}}  || {{status}}
+          </span>
           <article class="card-body">
-            <span style="color: darkviolet; text-align: center;" >
-              {{ message }} || {{ status }}
-            </span>
             <header class="mb-4"><h4 class="card-title">Customer Sign up</h4></header>
             <form method="POST">
               {% csrf_token %}
@@ -59,6 +59,7 @@
                     </div> <!-- form-group// -->      
                         
                 </form>
+               
             </article><!-- card-body.// -->
         </div> <!-- card .// -->
         <p class="text-center mt-4">Have an account? <a href="{% url 'customer:customer_login' %}">Log In</a></p>
