--- a/customer/templates/customer/seller_login.html
+++ b/customer/templates/customer/seller_login.html
@@ -6,39 +6,41 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
     <!-- ============================ COMPONENT LOGIN   ================================= -->
-    <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
-        <div class="card-body">
-            {{ message }}
-            <h4 class="card-title mb-4">Seller Sign in</h4>
-            <form method="POST">
-              {% csrf_token %}
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Seller Id" name="seller_id">
-                </div> <!-- form-group// -->
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" name='seller_password'>
-                </div> <!-- form-group// -->
+        <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
+          <div class="card-body">
+          <h4 class="card-title mb-4">Seller Sign in</h4>
+          <form method="POST">
+            {% csrf_token %}
+            {{message}}  
+              <div class="form-group">
+                 <input type="text" class="form-control" placeholder="Seller Id" name="seller_id" >
+              </div> <!-- form-group// -->
+              <div class="form-group">
+                <input type="password" class="form-control" placeholder="Password" name="password" >
+              </div> <!-- form-group// -->
+              
+              <div class="form-group">
+                  <a href="{% url 'customer:forgot_password_seller' %}" class="float-right">Forgot password?</a> 
+               
+              </div> <!-- form-group form-check .// -->
+              <div class="form-group">
+                  <!-- <button type="submit" class="btn btn-primary btn-block"> Login  </button> -->
+                  <!-- <a href="{% url 'Seller:seller_home' %}" class="btn btn-primary btn-block">Login</a> -->
+                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
 
-                <div class="form-group">
-                    <a href="{% url 'customer:forgot_password_seller' %}" class="float-right">Forgot password?</a>
-
-                </div> <!-- form-group form-check .// -->
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block"> Login  </button>
-                    <!-- <a href="{% url 'Seller:seller_home' %}" class="btn btn-primary btn-block">Login</a> -->
-                </div> <!-- form-group// -->
-            </form>
-        </div> <!-- card-body.// -->
-    </div> <!-- card .// -->
-
-    <p class="text-center mt-4">Don't have account? <a href="{% url 'customer:seller_register' %}">Sign up</a></p>
-    <br><br>
+              </div> <!-- form-group// -->    
+          </form>
+          </div> <!-- card-body.// -->
+        </div> <!-- card .// -->
+    
+         <p class="text-center mt-4">Don't have account? <a href="{% url 'customer:seller_register' %}">Sign up</a></p>
+         <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-
-
-</section>
-<!-- ========================= SECTION CONTENT END// ========================= -->
-
-
+    
+    
+    </section>
+    <!-- ========================= SECTION CONTENT END// ========================= -->
+    
+    
 
 {% endblock%}
