--- a/customer/templates/customer/product_detail.html
+++ b/customer/templates/customer/product_detail.html
@@ -71,7 +71,7 @@
                             </div>
                         </div> row.// -->
                         {% if item_exist %}
-                        <a href="" class="btn btn-primary">
+                        <a href="{% url 'customer:cart' %}" class="btn btn-primary">
                             Go to Cart
                         </a>
                         {% else %}
