--- a/seller/templates/seller/update_stock.html
+++ b/seller/templates/seller/update_stock.html
@@ -14,33 +14,34 @@
                 <header class="mb-4">
                     <h4 class="card-title">update_stock</h4>
                 </header>
-                <form action="" method="" enctype="multipart/form-data">
-
+                <form action="" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
                     <div class=" form-group">
                         <label>Enter product No</label>
-                        <input type="text" class="form-control" name="product_name">
+                        <input type="text" class="form-control" name="product_no" id="product_no" onchange="productupdate()">
                     </div> <!-- form-group end.// -->
                     <div class=" form-group">
                         <label>Product name</label>
-                        <input type="text" class="form-control" name="product_name">
+                        <input type="text" class="form-control" name="product_name" id="product_names">
                     </div>
 
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label>Avilable stock</label>
-                            <input type="number" class="form-control" name="stock">
+                            <input type="number" class="form-control" name="stock" id="available_stock">
                         </div> <!-- form-group end.// -->
                     </div> <!-- form-row.// -->  
                     
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label>New stock</label>
-                            <input type="number" class="form-control" name="stock">
+                            <input type="number" class="form-control" name="new_stock" id="new_stock">
                         </div> <!-- form-group end.// -->
                     </div> <!-- form-row.// --> 
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"> Update </button>
+                        {{ message }}
                     </div> <!-- form-group// -->
 
                 </form>
@@ -54,6 +55,34 @@
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
 
+    <script>
+        function productupdate(){
+            // console.log('product updated!')
+            console.log($('#product_no').val())
+
+            $.ajaxSetup({
+            headers: {
+                "X-CSRFToken": '{{ csrf_token }}'
+            }
+        })
+
+        $.ajax({
+            url: "{% url 'Seller:get_current_stock' %}",
+            method: 'POST',
+            data: {
+                product_no: $('#product_no').val()
+
+            },
+            success: function (response) { 
+
+                console.log(response)
+                $('#product_names').val(response.product_name)
+                $('#available_stock').val(response.available_stock)
+            }
+        })
+
+        }
+    </script>
 
 </main>
 
